# llm_fintune_gcp_airflow

./: .gitignore  Dockerfile  README copy.md  README.md  pyproject.toml
.astro/: config.yaml
dags/: llama3_fintune.py  vertex_ai_custom_job.py
include/: config.yaml  llm_finetune.py
